--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
                     aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
+                    <span class="sr-only">If You See this take a screenshot and send it to mhyc</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -26,16 +26,16 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right" id="navbar">
                     <li class="active">
-                        <a href="index.html">Home</a>
+                        <a href="index.html">主页</a>
                     </li>
                     <li>
-                        <a href="article.html">Article</a>
+                        <a href="article.html">文章</a>
                     </li>
                     <li>
-                        <a href="stuff.html">Stuff</a>
+                        <a href="stuff.html">作品</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="about.html">关于</a>
                     </li>
                 </ul>
             </div>
@@ -44,10 +44,10 @@
     <div class="container">
         <div class="blank"></div>
         <div class="title">
-            <p>This player dreamed of sunlight and trees. Of fire and water. It dreamed it created. And it dreamed it destroyed. It dreamed it hunted, and was hunted. It dreamed of shelter.
-                <br>But there are times it is sad, in the long dream. It creates worlds that have no summer, and it shivers under a black sun, and it takes its sad creation for reality.
-                <br>Sometimes the player dreamed it watched words on a screen.
-                <br>———— MineCraft《Ender Poem》</p>
+            <p>Sometimes when they are deep in dreams, I want to tell them, they are building true worlds in reality. Sometimes I want to tell them of their importance to the universe. Sometimes, when they have not made a true connection in a while, I want to help them to speak the word they fear.
+            <br>
+			<br>Too strong for this dream.
+            <br>———— MineCraft《Ender Poem》</p>
         </div>
     </div>
 
