--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                         <a href="index.html">主页</a>
                     </li>
                     <li>
-                        <a href="article.html">文章</a>
+                        <a href="404.html">文章</a>
                     </li>
                     <li>
-                        <a href="stuff.html">作品</a>
+                        <a href="404.html">作品</a>
                     </li>
                     <li>
-                        <a href="about.html">关于</a>
+                        <a href="404.html">关于</a>
                     </li>
                 </ul>
             </div>
