--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<div class="introduct">
 							<img class="avatar"
 								src="images/MHYCicon.png">
-							<p>Hi~ o(*￣▽￣*)ブ 我是MHYC，名字笔记拗口，叫我Simon就好了
+							<p>Hi~ o(*￣▽￣*)ブ 我是MHYC，名字比较拗口，叫我Simon就好了
 							</p>
 							<p>着迷Java的理科生，目前是中学生，思维跳跃性很强</p>
 							<!-- TODO 自我介绍 -->
