make link small

--- a/index.html
+++ b/index.html
@@ -135,11 +135,13 @@
 					</div>
 				</div>
 			</div>
-			<!-- TODO LINKS -->
 			<div class="find ch">
 				<div class="container links">
 					<h2 class="chtitle">MHYC出没的<span>地方</span></h2>
 					<div class="clear col-3">
+						<!--TODO ICONS-->
+					</div>
+					<div class="clear">
 						<a href="https://space.bilibili.com/1251782597" target="_blank">
 							<div class="item">
 								<div class="bg" style="background-color:#fb7299"></div>
@@ -161,8 +163,6 @@
 								</div>
 							</div>
 						</a>
-					</div>
-					<div class="clear">
 						
 						<a href="https://gitlab.com/MHYCWasTaken/" target="_blank">
 							<div class="item">
