--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 								<p>画功</p>
 								<div class="progress">
 									<div style="width:25%;">
-									</div><span>使用SAI和Aseprite的能力</span>
+									</div><span>使用SAI的能力</span>
 								</div>
 							</li>
 							<li>
@@ -155,7 +155,7 @@
 							</div>
 						</a>
 						
-						<a href="https://www.zhihu.com/people/sunguoqi" target="_blank">
+						<a href="https://www.zhihu.com/people/simon-52-88-87" target="_blank">
 							<div class="item">
 								<div class="bg" style="background-color:#0f88eb"></div>
 								<div class="inner"> <i class="icon-zhihu"></i>
@@ -264,7 +264,7 @@
 			<div class="container">
 				<h3>MHYC133</h3>
 				<p>人类的赞歌，便是勇气的赞歌</p>
-				<p class="c"><a href="github.com/MHYCWasTaken/MHYCWasTaken.github.io" target="_blank">Hosted on Github Pages</a></p>
+				<p class="c"><a href="https://github.com/MHYCWasTaken/MHYCWasTaken.github.io" target="_blank">Hosted on Github Pages</a></p>
 			</div>
 		</div>
 		</div>
