--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 					<div class="clear"> <a href="https://daily.mhyc.eu.org" target="_blank">
 							<div class="item">
 								<div class="avatar"> <img
-										src="https://cdn.jsdelivr.net/gh/sun0225SUN/photos/img/20210719203648.jpg">
+										src="images/disk.png">
 								</div>
 								<div class="inner">
 									<h5>Daily</h5>
@@ -161,24 +161,24 @@
 							</div>
 						</a>
 
-						<a href="https://dt" target="_blank">
+						<a href="https://tech.mhyc.eu.org/" target="_blank">
 							<div class="item">
 								<div class="avatar"> <img
-										src="https://td">
+										src="https://tech.mhyc.eu.org/favicon.png">
 								</div>
 								<div class="inner">
-									<h5>td</h5>
-									<p>td</p>
+									<h5>Tech</h5>
+									<p>MHYC的技术博客</p>
 								</div>
 							</div>
 						</a>
 
-						<a href="https://td" target="_blank">
+						<a href="" target="_blank">
 							<div class="item">
-								<div class="avatar"> <img src="ig"> </div>
+								<div class="avatar"> <img src=""> </div>
 								<div class="inner">
-									<h5>td</h5>
-									<p>dt</p>
+									<h5>敬请期待</h5>
+									<p>todo</p>
 								</div>
 							</div>
 						</a>
