--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="apple-touch-icon-precomposed" href="images/avatar.bab2b7d4.jpeg">
 	<link rel="stylesheet" type="text/css" href="css/h.9c69ed6c.css">
 	<link rel="stylesheet" type="text/css" href="css/nekotora.99cf6f8c.css">
+	<link rel="stylesheet" type="text/css" href="css/chengfen.css">
 	<link href="assets/fontawesome/css/brands.css" rel="stylesheet">
 	<link href="assets/fontawesome/css/fontawesome.css" rel="stylesheet">
 	<link href="assets/fontawesome/css/solid.css" rel="stylesheet">
@@ -141,7 +142,7 @@
 			<div class="gate ch">
 				<div class="container links">
 					<h2 class="chtitle">MHYC的<span>成分</span></h2>
-					<img src="images/Sprite-0001.png" width="97%"></img>
+					<img src="" alt="">
 				</div>
 			</div>
 			<div class="gate ch">
