--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
 			<div class="gate ch">
 				<div class="container links">
 					<h2 class="chtitle">MHYC的<span>成分</span></h2>
-					<img src="" alt="">
+					<!--TODO-->
+					<img src="images/Sprite-0001.png"></img>
 				</div>
 			</div>
 			<div class="gate ch">
